# home-inventory-manager

./: package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  .env.dev  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  alembic.ini  migrations.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1bd1c7c8265b_initial_migration.py  20e46cb39a58_initial.py  2372f3db5050_add_stocks_column.py  9356b24f2137_initial_migration.py  996495887b23_add_location_stock.py
backend/app/: __init__.py  main.py  setup_db.py
backend/app/crud/: __init__.py  category.py  inventory.py  item.py  room.py  stock.py  transaction.py
backend/app/db/: base.py  database.py  session.py
backend/app/endpoints/: __init__.py  categories.py  category.py  inventory.py  item.py  items.py  locations.py  room.py  root.py  stock.py  stocks.py  transactions.py
backend/app/models/: __init__.py  category.py  inventory.py  item.py  location.py  room.py  schemas.py  stock.py  transaction.py
backend/app/schemas/: __init__.py  category.py  item.py  location.py  stock.py
backend/app/service/: __init__.py  category.py  item.py  location.py  stock.py
backend/scripts/: init_data.py
frontend/: .env.dev  .gitignore  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
infra/: docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
nginx/: default.conf
scanner/: .env.dev  README.md  barcode_listener.py  config.py  (+3 more)
(+74 files in other folders)
